# work-packages-library

./: README.md  index.json
Blueriq-virtueel-inkomensloket/: README.md  documentatie.md
doccle-demonstrator-vil/: README.md
regels-API/: .gitignore  README.md  build.xml  frank-runner.properties  pom.xml  restart.sh  stop.sh
regels-API/src/frontend/: angular.json  karma.conf.js  package-lock.json  package.json
voorzieningen_poc/: PoC Voorzieningen met Harmonisator.md  README.md  Uitleg Harmonisator.md
voorzieningen_poc/files/: 220725_Vught_warme_overdracht_2022_kinderen_anoniem.xlsx  DefinitiesVoorzieningen.json  MySQLCreateInsertFaciltiyAndCOoperationTables.sql  MySQLCreateInsertHarmonisatorTables.sql  MySQLViewFacility.sql  MySQLViewTerm.sql  VoorbeeldDatasetVught.json
yivi-demo-vil/: Cargo.toml  README.md  package.json
yivi-demo-vil/public/: yivi.js
yivi-demo-vil/src/: config.rs  error.rs  index.rs  main.rs  model.rs  rule.rs  yivi.rs
yivi-demo-vil/templates/: base.html  index.html  no_allowance.html  not_implemented.html  result.html  rule.html
yivi-demo-vil/vil-claim/: Cargo.toml
yivi-demo-vil/vil-claim/src/: config.rs  main.rs  state.rs  yivi.rs
yivi-demo-vil/vil-claim/templates/: base.html  claim.html
zovis-client/: .firebaserc  .gitignore  HOW TO.md  package-lock.json  package.json
zovis-client/docs/: regelingen.json
zovis-client/public/: index.html  manifest.json  style.css
zovis-client/src/: api.ts  config.ts  firebase.js  util.ts
zovis-client/src/components/: App.tsx  Dashboard.tsx  Entitlement.tsx  ForgotPassword.tsx  Login.tsx  (+15 more)
(+46 files in other folders)
